added some validation to the html and js do not submit an empty form.

--- a/style.css
+++ b/style.css
@@ -153,5 +153,9 @@ input{
   }
   
   input:invalid {
-    border: 2px solid red;
+    border: 2px solid rgb(255, 0, 0);
+  }
+
+  #errorMessage{
+    color: red;
   }
